# smartBot

./: .gitignore  PLAN.md  README.md  TECHNICAL_REPORT.md  implementation_audit.md  instructions.md  run.ps1
backend/: .dockerignore  .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  deps.py  gemini_client.py  main.py  schemas.py  sse.py  utils.py
backend/app/agent/: __init__.py  cost.py  critic.py  executor.py  planner.py  router.py
backend/app/pipeline/: __init__.py  audio_stt.py  base.py  dispatch.py  image_ocr.py  pdf.py  text.py
backend/app/rag/: __init__.py  chunker.py  retriever.py  store.py
backend/app/tools/: __init__.py  answer.py  base.py  code_explain.py  registry.py  sentiment.py  structured_extract.py  summarize.py  urlfetch.py  youtube.py
backend/tests/: conftest.py  test_api.py  test_rag.py  test_unit.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: features-dialog.tsx  inspector.tsx  mode-toggle.tsx  sidebar.tsx
frontend/src/components/chat/: composer.tsx  empty-state.tsx  markdown.tsx  message-bubble.tsx  message-list.tsx  sample-gallery.tsx
frontend/src/components/panels/: cost-panel.tsx  extracted-panel.tsx  tool-graph.tsx  trace-panel.tsx
frontend/src/components/ui/: scroll-area.tsx
frontend/src/hooks/: use-chat.ts
frontend/src/lib/: api.ts  export.ts  mock.ts  types.ts  utils.ts
